src/ui/lidarr_ui/library/snapshots/managarr__ui__lidarr_ui__library__add_artist_ui__add_artist_ui_tests__tests__snapshot_tests__add_artist_already_in_library_ui_renders.snap
---
source: src/ui/lidarr_ui/library/add_artist_ui_tests.rs
expression: output
---
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                     ╭─────────────────────────────────────────────────────  Add Artist  ─────────────────────────────────────────────────────╮                      
                     │Test Artist                                                                                                             │                      
                     ╰────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯                      
                     ╭────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮                      
                     │   ✔    Name                       Type           Status         Rating     Genres                                      │                      
                     │=>      Test Artist                Person         Continuing     8.4        soundtrack                                  │                      
                     │                                                                                                                        │                      
                     │                                                                                                                        │                      
                     │                                                                                                                        │                      
                     │                                                                                                                        │                      
                     │                                                                                                                        │                      
                     │                                                                                                                        │                      
                     │                                                                                                                        │                      
                     │                                                                                                                        │                      
                     │                                                                                                                        │                      
                     │                                                                                                                        │                      
                     │                                       ╭───────────────  Error  ───────────────╮                                        │                      
                     │                                       │This artist is already in your library │                                        │                      
                     │                                       │                                       │                                        │                      
                     │                                       ╰───────────────────────────────────────╯                                        │                      
                     │                                                                                                                        │                      
                     │                                                                                                                        │                      
                     │                                                                                                                        │                      
                     │                                                                                                                        │                      
                     │                                                                                                                        │                      
                     │                                                                                                                        │                      
                     │                                                                                                                        │                      
                     │                                                                                                                        │                      
                     │                                                                                                                        │                      
                     │                                                                                                                        │                      
                     │                                                                                                                        │                      
                     │                                                                                                                        │                      
                     │                                                                                                                        │                      
                     │                                                                                                                        │                      
                     │                                                                                                                        │                      
                     ╰────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
